# GeoGuard

./: .gitignore  LICENSE  README.md
backend/: .gitignore  extracted_compliance_rules.json  main.py
backend/api/: routes.py
backend/models/: schema.py
backend/services/: db_service.py
backend/test/: pdf_process_test.py
backend/utils/: pdf_process.py
frontend/: package-lock.json  package.json
frontend/src/app/map/: page.jsx
frontend/src/data/: residential-ahm.geojson
frontend/src/lib/: prisma.js
python-backend/: .gitignore  Dockerfile  api.py  api2.py  extracted_compliance_rules.json  inference.py  main.py  pyproject.toml
python-backend/api/: routes.py
python-backend/models/: schema.py
python-backend/satellite_images/: dataset.json
python-backend/services/: change_type.py  connection_manager.py  db_service.py  gen_tif.py  inference_helper.py  inference_service.py  pdf_service.py  query_engine_service.py  raster_to_vector.py  s3_service.py
python-backend/test/: all_query.py  extracted_compliance_rules.json  image_testing.py  inference_local_scheduler.py  query_engine.py  satellite_imgs_generator.py
python-backend/utils/: pdf_process.py
website/: .gitignore  package-lock.json  package.json
website/prisma/: schema.prisma
website/src/app/: globals.css  layout.js  page.js  providers.jsx
website/src/app/map/: ComplaintUpload.jsx  page.jsx
website/src/context/: SocketContext.jsx
website/src/data/: industrial-ahm.geojson  landingContent.js  vegetation-ahm.geojson  waterbody-ahm.geojson
website/src/lib/: s3.js  socket-client.js
(+36 files in other folders)
