[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.88",
    "fastapi[standard]",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "prisma>=0.15.0",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.27.2.2",
    "pymupdf4llm>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "rasterio>=1.5.0",
    "sqlalchemy>=2.0.49",
]
